@@ -1,19 +1,16 @@
 package sirttas.dpanvil.api.predicate.block.logical;
 
-import java.util.Arrays;
-import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
-
-import com.google.common.collect.Lists;
 import com.mojang.serialization.Codec;
-
 import net.minecraft.core.BlockPos;
 import net.minecraft.world.level.LevelReader;
 import net.minecraftforge.registries.ObjectHolder;
 import sirttas.dpanvil.api.DataPackAnvilApi;
 import sirttas.dpanvil.api.predicate.block.BlockPosPredicateType;
 import sirttas.dpanvil.api.predicate.block.IBlockPosPredicate;
+
+import java.util.Arrays;
+import java.util.List;
+import java.util.stream.Stream;
 
 public final class AndBlockPredicate extends AbstractListBlockPredicate {
 
@@ -41,16 +38,16 @@ public final class AndBlockPredicate extends AbstractListBlockPredicate {
 
 	@Override
 	public IBlockPosPredicate and(IBlockPosPredicate... predicates) {
-		return new AndBlockPredicate(this.merge(Lists.newArrayList(predicates), AndBlockPredicate.class));
+		return new AndBlockPredicate(this.merge(List.of(predicates), AndBlockPredicate.class));
 	}
 
 	@Override
 	public IBlockPosPredicate simplify() {
 		List<IBlockPosPredicate> simplified = this.predicates.stream()
 				.map(IBlockPosPredicate::simplify)
-				.flatMap(p -> p instanceof AndBlockPredicate ? ((AndBlockPredicate) p).predicates.stream() : Stream.of(p))
+				.flatMap(p -> p instanceof AndBlockPredicate andBlockPredicate ? andBlockPredicate.predicates.stream() : Stream.of(p))
 				.filter(p -> !(p instanceof AnyBlockPredicate))
-				.collect(Collectors.toList());
+				.toList();
 		
 		if (simplified.isEmpty() || simplified.stream().anyMatch(NoneBlockPredicate.class::isInstance)) {
 			return IBlockPosPredicate.none();
