@@ -1,15 +1,5 @@
 package sirttas.dpanvil.tag;
 
-import java.util.List;
-import java.util.Map;
-import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.Executor;
-import java.util.function.Consumer;
-import java.util.function.Supplier;
-import java.util.stream.Collectors;
-
-import javax.annotation.Nullable;
-
 import com.google.common.collect.BiMap;
 import com.google.common.collect.ImmutableBiMap;
 import com.google.common.collect.ImmutableMap;
@@ -19,13 +9,13 @@ import com.mojang.datafixers.util.Pair;
 import com.mojang.serialization.Codec;
 import com.mojang.serialization.DataResult;
 import com.mojang.serialization.DynamicOps;
-
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.server.packs.resources.ResourceManager;
 import net.minecraft.tags.Tag;
 import net.minecraft.tags.TagCollection;
 import net.minecraft.tags.TagLoader;
 import net.minecraft.util.profiling.ProfilerFiller;
+import org.jetbrains.annotations.NotNull;
 import sirttas.dpanvil.DataPackAnvil;
 import sirttas.dpanvil.api.DPAnvilNames;
 import sirttas.dpanvil.api.DataPackAnvilApi;
@@ -34,6 +24,13 @@ import sirttas.dpanvil.api.data.IDataManager;
 import sirttas.dpanvil.api.data.IDataWrapper;
 import sirttas.dpanvil.api.imc.DataTagIMC;
 import sirttas.dpanvil.api.tag.DataTagRegistry;
+
+import java.util.List;
+import java.util.Map;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.Executor;
+import java.util.function.Consumer;
+import java.util.function.Supplier;
 
 @SuppressWarnings("unchecked")
 public class DataTagManager implements IDataManager<TagCollection<?>>, ICodecProvider<Map<ResourceLocation, TagCollection<?>>> {
@@ -45,9 +42,9 @@ public class DataTagManager implements IDataManager<TagCollection<?>>, ICodecPro
 	private static final String FOLDER = DataPackAnvilApi.TAGS_FOLDER;
 	
 	private BiMap<ResourceLocation, TagCollection<?>> tagCollections = ImmutableBiMap.of();
-	private Map<ResourceLocation, DataTagRegistry<?>> tagRegistries = Maps.newHashMap();
+	private final Map<ResourceLocation, DataTagRegistry<?>> tagRegistries = Maps.newHashMap();
 	
-	private final Codec<Map<ResourceLocation, TagCollection<?>>> codec = Codec.unboundedMap(ResourceLocation.CODEC, new Codec<TagCollection<?>>() {
+	private final Codec<Map<ResourceLocation, TagCollection<?>>> codec = Codec.unboundedMap(ResourceLocation.CODEC, new Codec<>() {
 		@Override
 		public <T> DataResult<T> encode(TagCollection<?> input, DynamicOps<T> ops, T prefix) {
 			return MAP_CODEC.encode(mapCollection(input), ops, prefix);
@@ -61,7 +58,7 @@ public class DataTagManager implements IDataManager<TagCollection<?>>, ICodecPro
 			input.getAllTags().forEach((key, tag) -> map.put(key, tag.getValues().stream()
 					.map(manager::getId)
 					.filter(location -> !DataPackAnvilApi.ID_NONE.equals(location))
-					.collect(Collectors.toList())));
+					.toList()));
 			return Pair.of(id, map);
 		}
 
@@ -88,12 +85,12 @@ public class DataTagManager implements IDataManager<TagCollection<?>>, ICodecPro
 	});
 	
 	@Override
-	public Class<TagCollection<?>> getContentType() {
+	public @NotNull Class<TagCollection<?>> getContentType() {
 		return (Class<TagCollection<?>>) (Class<?>) TagCollection.class; // double cast or we get a compilation error
 	}
 
 	@Override
-	public Map<ResourceLocation, TagCollection<?>> getData() {
+	public @NotNull Map<ResourceLocation, TagCollection<?>> getData() {
 		return tagCollections;
 	}
 
@@ -102,7 +99,7 @@ public class DataTagManager implements IDataManager<TagCollection<?>>, ICodecPro
 	}
 	
 	@Override
-	public void setData(Map<ResourceLocation, TagCollection<?>> map) {
+	public void setData(@NotNull Map<ResourceLocation, TagCollection<?>> map) {
 		tagCollections = ImmutableBiMap.copyOf(map);
 		map.forEach(this::injectTagCollection);
 		DataPackAnvilApi.LOGGER.info("Loaded {} {}", tagCollections.size(), "DataPack Anvil TagCollection");
@@ -115,19 +112,19 @@ public class DataTagManager implements IDataManager<TagCollection<?>>, ICodecPro
 	}
 	
 	@Override
-	public ResourceLocation getId(final TagCollection<?> value) {
+	public @NotNull ResourceLocation getId(final TagCollection<?> value) {
 		return tagCollections.inverse().getOrDefault(value, DataPackAnvilApi.ID_NONE);
 	}
 	
 	@Override
-	public String getFolder() {
+	public @NotNull String getFolder() {
 		return FOLDER;
 	}
 
 	public <T> void putTagRegistryFromIMC(Supplier<?> supplier) {
 		DataTagIMC<T> imc = (DataTagIMC<T>) supplier.get();
 		
-		tagRegistries.put(DataPackAnvil.WRAPPER.getId(imc.getManager()), imc.getRegistry());
+		tagRegistries.put(DataPackAnvil.WRAPPER.getId(imc.manager()), imc.registry());
 	}
 	
 	@Override
@@ -136,21 +133,16 @@ public class DataTagManager implements IDataManager<TagCollection<?>>, ICodecPro
 	}
 	
 	@Override
-	public IDataWrapper<TagCollection<?>> getWrapper(ResourceLocation id) {
+	public @NotNull IDataWrapper<TagCollection<?>> getWrapper(@NotNull ResourceLocation id) {
 		throw new UnsupportedOperationException();
 	}
 	
 	@Override
-	public CompletableFuture<Void> reload(PreparationBarrier stage, ResourceManager resourceManager, ProfilerFiller preparationsProfiler, ProfilerFiller reloadProfiler, Executor backgroundExecutor,
-			Executor gameExecutor) {
+	public @NotNull CompletableFuture<Void> reload(PreparationBarrier stage, @NotNull ResourceManager resourceManager, @NotNull ProfilerFiller preparationsProfiler, @NotNull ProfilerFiller reloadProfiler, @NotNull Executor backgroundExecutor,
+												   @NotNull Executor gameExecutor) {
 		List<LoaderInfo<?>> list = Lists.newArrayList();
 		
-		visitDataManagers(manager -> {
-			LoaderInfo<?> loaderinfo = this.createLoader(resourceManager, backgroundExecutor, manager);
-			if (loaderinfo != null) {
-				list.add(loaderinfo);
-			}
-		});
+		visitDataManagers(manager -> list.add(this.createLoader(resourceManager, backgroundExecutor, manager)));
 		List<CompletableFuture<?>> futures = Lists.newArrayList();
 		
 		list.stream().map(li -> li.pendingLoad).forEach(futures::add);
@@ -168,22 +160,17 @@ public class DataTagManager implements IDataManager<TagCollection<?>>, ICodecPro
 				.forEach(e -> consumer.accept(e.getValue()));
 	}
 	
-	@Nullable
-	private <T> LoaderInfo<T> createLoader(ResourceManager resourceManager, Executor executor, IDataManager<T> manager) {
-		TagLoader<T> tagloader = new TagLoader<>(manager::getOptional, FOLDER + manager.getFolder());
-		CompletableFuture<? extends TagCollection<T>> completablefuture = CompletableFuture.supplyAsync(() -> tagloader.loadAndBuild(resourceManager), executor);
+	private <T> @NotNull LoaderInfo<T> createLoader(ResourceManager resourceManager, Executor executor, IDataManager<T> manager) {
+		TagLoader<T> tagLoader = new TagLoader<>(manager::getOptional, FOLDER + manager.getFolder());
+		CompletableFuture<? extends TagCollection<T>> completableFuture = CompletableFuture.supplyAsync(() -> tagLoader.loadAndBuild(resourceManager), executor);
 			
-		return new LoaderInfo<>(manager, completablefuture);
+		return new LoaderInfo<>(manager, completableFuture);
 	}
 
-	static class LoaderInfo<T> {
-		private final IDataManager<T> manager;
-		final CompletableFuture<? extends TagCollection<T>> pendingLoad;
-
-		LoaderInfo(IDataManager<T> manager, CompletableFuture<? extends TagCollection<T>> pendingLoad) {
-			this.manager = manager;
-			this.pendingLoad = pendingLoad;
-		}
+	record LoaderInfo<T>(
+			IDataManager<T> manager,
+			CompletableFuture<? extends TagCollection<T>> pendingLoad
+	) {
 
 		public void addToBuilder(ImmutableMap.Builder<ResourceLocation, TagCollection<?>> builder) {
 			builder.put(DataPackAnvil.WRAPPER.getId(manager), this.pendingLoad.join());
